--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body, html {
     justify-content: center;
     align-items: center;
     background-color: black;
+    cursor: none;
 }
 
 #loading-screen {
